--- a/apworlds.html
+++ b/apworlds.html
@@ -50,11 +50,11 @@
                         <strong>Archipelago Discord Server</strong> [<a href="https://discord.gg/8Z65BR2">Link</a>]<br />
                         <strong>Alternative Resource:</strong> <a href="https://docs.google.com/spreadsheets/d/1733DtKxylcSmCxn216rOVkJNS-aezFu8nURRw86CjKc/edit?gid=58422002">Community-Maintained Google Sheet</a>
                         <br />
-                        <span>Last Updated: February 3, 2025</span>
+                        <span>Last Updated: February 10, 2025</span>
                     </p>
                 </header>
 
-                <h2>APWorlds (251)</h2>
+                <h2>APWorlds (253)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#APBingo">APBingo (Meta)</a></small>
@@ -68,6 +68,7 @@
                 <small>&emsp;<a href="#SpoilerFreeTextClient">Spoiler-Free Text Client (Meta)</a></small>
                 <small>&emsp;<a href="#UniversalTracker">Universal Tracker (Meta)</a></small>
                 <br />
+                <small><a href="#ADifficultGameAboutClimbing">A Difficult Game About Climbing (PC)</a></small>
                 <small><a href="#AHatInTime">A Hat in Time (PC)</a></small>
                 <small><a href="#ARobotNamedFight">A Robot Named Fight! (PC)</a></small>
                 <small><a href="#AShortHike">A Short Hike (PC)</a></small>
@@ -104,6 +105,7 @@
                 <small>&emsp;<a href="#CastlevaniaLegacyOfDarkness">Castlevania: Legacy of Darkness (N64)</a></small>
                 <small>&emsp;<a href="#CastlevaniaCircleOfTheMoon">Castlevania: Circle of the Moon (GBA)</a></small>
                 <br />
+                <small><a href="#CatQuest">Cat Quest (PC)</a></small>
                 <small><a href="#CavernOfDreams">Cavern of Dreams (PC)</a></small>
                 <small><a href="#CaveStory">Cave Story (PC)</a></small>
                 <br />
@@ -189,6 +191,7 @@
                 <small><a href="#IntoTheBreach">Into the Breach (PC)</a></small>
                 <small><a href="#IttleDew2">Ittle Dew 2+ (PC)</a></small>
                 <small><a href="#JakAndDaxterThePrecursorLegacy">Jak and Daxter: The Precursor Legacy (PS2)</a></small>
+                <small><a href="#Jigsaw">Jigsaw (Web)</a></small>
                 <small><a href="#KeepTalkingAndNobodyExplodes">Keep Talking and Nobody Explodes (PC)</a></small>
                 <small><a href="#KeymastersKeep">Keymaster's Keep (PC)</a></small>
                 <small><a href="#Kindergarten2">Kindergarten 2 (PC - 18+)</a></small>
@@ -196,13 +199,14 @@
                 <small>[Kingdom Hearts Franchise]</small>
                 <small>&emsp;<a href="#KINGDOMHEARTSBirthBySleepFINALMIX">KINGDOM HEARTS Birth by Sleep FINAL MIX (PC)</a></small>
                 <small>&emsp;<a href="#KINGDOMHEARTSFINALMIX">KINGDOM HEARTS FINAL MIX (PC)</a></small>
-                <small>&emsp;<a href="#KINGDOMHEARTS3582Days">KINGDOM HEARTS 358/2 Days (DS)</a></small>
+                <!-- <small>&emsp;<a href="#KINGDOMHEARTS3582Days">KINGDOM HEARTS 358/2 Days (DS)</a></small> -->
                 <small>&emsp;<a href="#KINGDOMHEARTSChainOfMemories">KINGDOM HEARTS Chain of Memories (GBA)</a></small>
                 <small>&emsp;<a href="#KINGDOMHEARTSReChainOfMemories">KINGDOM HEARTS Re:Chain of Memories (PC)</a></small>
                 <small>&emsp;<a href="#KINGDOMHEARTS2FINALMIX">KINGDOM HEARTS II FINAL MIX (PC)</a></small>
                 <br />
                 <small>[Kirby Franchise]</small>
                 <small>&emsp;<a href="#KirbysDreamLand3">Kirby's Dream Land 3 (SNES)</a></small>
+                <small>&emsp;<a href="#KirbySuperStar">Kirby Super Star (SNES)</a></small>
                 <small>&emsp;<a href="#Kirby64TheCrystalShards">Kirby 64: The Crystal Shards (N64)</a></small>
                 <br />
                 <small><a href="#Landstalker">Landstalker - The Treasures of King Nole (GEN)</a></small>
@@ -268,7 +272,7 @@
                 <small><a href="#Osu">Osu! (PC)</a></small>
                 <small><a href="#OuterWilds">Outer Wilds (PC)</a></small>
                 <small><a href="#Overcooked2">Overcooked! 2 (PC)</a></small>
-                <small><a href="#OxygenNotIncluded">Oxygen Not Included (PC)</a></small>
+                <!-- <small><a href="#OxygenNotIncluded">Oxygen Not Included (PC)</a></small> -->
                 <br />
                 <small>[Pokémon Franchise - Mainline Series]</small>
                 <small>&emsp;<a href="#PokemonRedAndBlue">Pokémon Red and Blue (GB)</a></small>
@@ -484,6 +488,13 @@
 
                 <hr />
 
+                <h3><span id="ADifficultGameAboutClimbing"></span> A Difficult Game About Climbing (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/BlastSlimey/GrabbingChecks/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1336857648464920586">Link</a>]</li>
+                </ul>
+
                 <h3 ><span id="AHatInTime"></span> A Hat in Time (PC)</h3>
 
                 <ul>
@@ -684,6 +695,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1326400868773400677/1332058680333570111">Link</a>]</li>
+                    <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/RunInAWeek/Bomberman-64-AP-Tracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1326400868773400677">Link</a>]</li>
                 </ul>
 
@@ -762,6 +774,15 @@
 
                 <hr />
 
+                <h3><span id="CatQuest"></span> Cat Quest (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Nikkilites/Archipelago-CatQuest/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/Nikkilites/CatQuest-Randomizer/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/Nikkilites/Archipelago-CatQuest/blob/main/worlds/cat_quest/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1319965826601844736">Link</a>]</li>
+                </ul>
+
                 <h3><span id="CavernOfDreams"></span> Cavern of Dreams (PC)</h3>
 
                 <ul>
@@ -826,6 +847,7 @@
 
                 <ul>
                     <li><strong>APWorld + Client</strong> [<a href="https://github.com/chesslogic/chessv/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/checkerslogic/checksmate-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/chesslogic/Archipelago/blob/checks_mate/worlds/checksmate/docs/checksmate_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1033159819114319892">Link</a>]</li>
                 </ul>
@@ -1355,6 +1377,14 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1138467653552451606">Link</a>]</li>
                 </ul>
 
+                <h3><span id="Jigsaw"></span> Jigsaw (Web)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/spineraks-org/ArchipelagoJigsaw/releases">Link</a>]</li>
+                    <li><strong>Website</strong> [<a href="https://jigsaw-ap.netlify.app/">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1337582193802870907">Link</a>]</li>
+                </ul>
+
                 <h3><span id="KeepTalkingAndNobodyExplodes"></span> Keep Talking and Nobody Explodes (PC)</h3>
 
                 <ul>
@@ -1394,20 +1424,21 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
-                    <li><strong>Beta APWorld</strong> [<a href="https://github.com/gaithernOrg/ArchipelagoKH1FM/releases">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> [<a href="https://github.com/gaithernOrg/ArchipelagoKH1FM-REVAMP/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/OpenKH/OpenKh/releases">Link</a>]</li>
+                    <li><strong>Beta Game Mod</strong> [<a href="https://github.com/gaithern/KH1FM-RANDOMIZER/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/Lojtana/Kingdom-Hearts-FM-AP-Tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Kingdom%20Hearts/kh1/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1311061458662199357">Link</a>]</li>
                 </ul>
 
-                <h3><span id="KINGDOMHEARTS3582Days"></span><span id="KingdomHearts3582Days"></span> KINGDOM HEARTS 358/2 Days (DS)</h3>
+                <!-- <h3><span id="KINGDOMHEARTS3582Days"></span><span id="KingdomHearts3582Days"></span> KINGDOM HEARTS 358/2 Days (DS)</h3>
 
                 <ul>
                     <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1087405565069766756/1261421354784391228">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read in Discord [<a href="https://discord.com/channels/731205301247803413/1087405565069766756/1088418720906498088">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1087405565069766756">Link</a>]</li>
-                </ul>
+                </ul> -->
 
                 <h3><span id="KINGDOMHEARTSChainOfMemories"></span><span id="KingdomHeartsChainOfMemories"></span> KINGDOM HEARTS Chain of Memories (GBA)</h3>
 
@@ -1448,6 +1479,14 @@
                     <li><strong>Tracker</strong> Universal Tracker - Partially Supported</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Kirby's%20Dream%20Land%203/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1224389195485806703">Link</a>]</li>
+                </ul>
+
+                <h3><span id="KirbySuperStar"></span> Kirby Super Star (SNES)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Silvris/Archipelago/releases?q=%22Kirby+Super+Star%22&expanded=true">Link</a>]</li>
+                    <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1170152771043999764">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Kirby64TheCrystalShards"></span> Kirby 64: The Crystal Shards (N64)</h3>
@@ -1887,6 +1926,7 @@
 
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/Ixrec/OuterWildsArchipelagoRandomizer/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> In-Game Tracker</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Ixrec/OuterWildsArchipelagoRandomizer/blob/main/README.md#installation">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1178700404637311086">Link</a>]</li>
                 </ul>
@@ -1900,12 +1940,12 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1043593072174440448">Link</a>]</li>
                 </ul>
 
-                <h3><span id="OxygenNotIncluded"></span> Oxygen Not Included (PC)</h3>
+                <!-- <h3><span id="OxygenNotIncluded"></span> Oxygen Not Included (PC)</h3>
 
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/ShadowKitty42/ONI-Archipelago/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1209238808625946634">Link</a>]</li>
-                </ul>
+                </ul> -->
 
                 <h2>Pokémon Franchise - Mainline Series</h2>
 
@@ -2493,6 +2533,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/WritingHusky/Twilight_Princess_apworld/releases">Link</a>]</li>
+                    <li><strong>Website</strong> [<a href="https://generator.tprandomizer.com/s/aptest">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/WritingHusky/Twilight_Princess_apworld/blob/main/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1110253490875404388">Link</a>]</li>
                 </ul>
@@ -2500,7 +2541,7 @@
                 <h3><span id="TheLegendOfZeldaALinkBetweenWorlds"></span> The Legend of Zelda: A Link Between Worlds (3DS)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/LittleCube-hax/albw-ap-plugin/releases">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/randomsalience/albw-archipelago/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/Triillian/ALBW-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/LittleCube-hax/albw-archipelago/blob/main/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1183624197935730758">Link</a>]</li>
@@ -2666,7 +2707,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
-                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1090824439710625822/1330215017752301599">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1090824439710625822/1338626544771399760">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Wargroove/wargroove/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090824439710625822">Link</a>]</li>
                 </ul>
