--- a/index.html
+++ b/index.html
@@ -49,6 +49,78 @@
                     </p>
                 </header>
 
+                <h2 id="W202506">Week of February 3-9, 2025</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Autopelago [<a href="apworlds.html#Autopelago">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Dark Souls: Remastered [<a href="apworlds.html#DarkSoulsRemastered">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Guild Wars 2 [<a href="apworlds.html#GuildWars2">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hastune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDivaMegaMix">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> HuniePop [<a href="apworlds.html#HuniePop">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Keymaster's Keep [<a href="apworlds.html#KeymastersKeep">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> OpenRCT2 [<a href="apworlds.html#OpenRCT2">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Ori and the Blind Forest [<a href="apworlds.html#OriAndTheBlindForest">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokémon FireRed and LeafGreen [<a href="apworlds.html#PokemonFireRedAndLeafGreen">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Quake [<a href="apworlds.html#Quake">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Ratchet & Clank: Going Commando [<a href="apworlds.html#RatchetAndClankGoingCommando">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Resident Evil 3 (Remake) [<a href="apworlds.html#ResidentEvil3">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Slow Release Client [<a href="apworlds.html#SlowReleaseClient">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sly Cooper and the Thievius Raccoonus [<a href="apworlds.html#SlyCooperAndTheThieviusRaccoonus">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sonic the Hedgehog [<a href="apworlds.html#SonicTheHedgehog">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> The Legend of Zelda: A Link Between Worlds [<a href="apworlds.html#TheLegendOfZeldaALinkBetweenWorlds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Touhou Koumakyou: The Embodiment of Scarlet Devil [<a href="apworlds.html#TouhouKoumakyouTheEmbodimentOfScarletDevil">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> UFO 50 [<a href="apworlds.html#UFO50">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Universal Tracker [<a href="apworlds.html#UniversalTracker">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wario Land 4 [<a href="apworlds.html#WarioLand4">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Wargroove [<a href="apworlds.html#Wargroove">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Autopelago [<a href="apworlds.html#Autopelago">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Dark Souls: Remastered [<a href="apworlds.html#DarkSoulsRemastered">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Getting Over It with Bennett Foddy [<a href="apworlds.html#GettingOverItWithBennettFoddy">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Guild Wars 2 [<a href="apworlds.html#GuildWars2">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> HuniePop [<a href="apworlds.html#HuniePop">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> OpenRCT2 [<a href="apworlds.html#OpenRCT2">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Quake [<a href="apworlds.html#Quake">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Resident Evil 3 (Remake) [<a href="apworlds.html#ResidentEvil3">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Satisfactory [<a href="apworlds.html#Satisfactory">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> The Messenger [<a href="apworlds.html#TheMessenger">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Timespinner [<a href="apworlds.html#Timespinner">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> A Difficult Game About Climbing [<a href="apworlds.html#ADifficultGameAboutClimbing">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Cat Quest [<a href="apworlds.html#CatQuest">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Jigsaw [<a href="apworlds.html#Jigsaw">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Kirby Super Star [<a href="apworlds.html#KirbySuperStar">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta APWorld</strong> KINGDOM HEARTS FINAL MIX [<a href="apworlds.html#KINGDOMHEARTSFINALMIX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta Game Mod</strong> KINGDOM HEARTS FINAL MIX [<a href="apworlds.html#KINGDOMHEARTSFINALMIX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game PR Opened</strong> Peaks of Yore [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/4626">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Bomberman 64 [<a href="apworlds.html#Bomberman64">Link</a>]</li>
+                    <li><strong>New Tracker</strong> ChecksMate [<a href="apworlds.html#ChecksMate">Link</a>]</li>
+                </ul>
+
                 <h2 id="W202505">Week of January 27 - February 2, 2025</h2>
 
                 <ul>
