--- a/apworlds.html
+++ b/apworlds.html
@@ -43,7 +43,8 @@
                         <a href="index.html">News</a><br />
                         <a href="apworlds.html">APWorlds</a><br /><br />
 
-                        News Archive <a href="archive2024.html">2024</a>
+                        News Archive <a href="archive2024.html">2024</a><br />
+                        News Archive <a href="archive2025.html">2025</a>
                     </p>
 
                     <p>
